<resources>
    <string name="app_name">CykloNavi</string>

    <string name="welcome">Welcome to CykloNavi!</string>
    <string name="action_settings">Settings</string>
    <string name="action_info">Info</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="load_saved_button">Load saved</string>
    <string name="show_map_button">Show Map</string>
    <string name="kolo">kolo</string>
    <string name="title_activity_navigation">Map</string>
    <string name="title_activity_load_screen">loadScreen</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_menu">menu</string>
    <string name="Saves">Saves</string>
    <string name="Track_info">Track info</string>
    <string name="Settings">Settings</string>
    <string name="Help">Help</string>
    <string name="Change_destination">Change destination/track</string>
    <string name="title_activity_settings">settings</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_track_info">TrackInfo</string>
    <string name="action_back">actionBack</string>
    <string name="title_activity_menu_fragment">MenuFragment</string>
    <string name="title_activity_tabbed_menu">TabbedMenu</string>
    <string name="title_section1">titleSection1</string>
    <string name="title_section2">titleSection2</string>
    <string name="title_section3">titleSection3</string>
    <string name="title_activity_menu_tab">MenuTab</string>
    <string-array name="language_array">
        <item>Čeština</item>
        <item>English</item>
    </string-array>
    <string-array name="typeRouteTitles">
        <item>Balanced</item>
        <item>Calm</item>
        <item>Flat</item>
        <item>Fast</item>
    </string-array>


    <string name="hello">CustomSpinner Demo from CoderzHeaven!</string>
    <string name="prompt">  Select your Favourite  </string>
    <drawable name="white">#ffffff</drawable>
    <drawable name="black">#000000</drawable>
    <drawable name="green">#347C2C</drawable>
    <drawable name="pink">#FF00FF</drawable>
    <drawable name="violet">#a020f0</drawable>
    <drawable name="grey">#778899</drawable>
    <drawable name="red">#C11B17</drawable>
    <drawable name="yellow">#FFFF8C</drawable>
    <drawable name="PowderBlue">#b0e0e6</drawable>
    <drawable name="brown">#2F1700</drawable>
    <drawable name="Hotpink">#7D2252</drawable>
    <string name="select_Category">Select Category</string>
    <drawable name="darkgrey">#606060</drawable>
    <string name="title_activity_route_chooser">RouteChooser</string>
    <string name="title_activity_rout_map">RoutMap</string>
    <string name="title_activity_load">Load</string>
    <string name="title_activity_navigation_arrow">NavigationArrow</string>

</resources>
